--- a/package.json
+++ b/package.json
@@ -3,27 +3,35 @@
   "version": "1.0.0",
   "description": "Backend for Telegram login with JWT authentication using TypeScript and Express",
   "main": "dist/app.js",
-  "type": "commonjs",
   "scripts": {
     "dev": "ts-node-dev --respawn src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "express",
+    "typescript",
+    "telegram",
+    "jwt",
+    "auth"
+  ],
+  "author": "Jeeban",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.2",
+    "@types/express": "^4.17.23",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.8.3"
   }
 }
