--- a/package.json
+++ b/package.json
@@ -1,37 +1,21 @@
 {
   "name": "telegram-jwt-backend",
   "version": "1.0.0",
-  "description": "Backend for Telegram login with JWT authentication using TypeScript and Express",
   "main": "dist/app.js",
   "scripts": {
     "dev": "ts-node-dev --respawn src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js"
   },
-  "keywords": [
-    "express",
-    "typescript",
-    "telegram",
-    "jwt",
-    "auth"
-  ],
-  "author": "Jeeban",
-  "license": "MIT",
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "dependencies": {
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.23",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.19.4",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
+    "ts-node-dev": "^2.0.0"
   }
 }
